[func] ignore files de build apio
Signed-off-by: Julio Cesar Torres <julio.cesartorres@mcn.gouv.qc.ca>

--- a/.gitignore
+++ b/.gitignore
@@ -95,8 +95,8 @@
 */*/bd/*/ip/*/*.xml
 */*/*/bd/*/ip/*/*.xml
 
-*.c
-*.h
+#*.c
+#*.h
 *.vho
 *.html
 */*/bd/*/ip/*/*.tcl
@@ -120,3 +120,12 @@ ipshared
 *.ini
 *.rlx
 __synthesis_is_complete__
+
+*.bin
+*.asc
+*.out
+hardware.json
+*.dblite
+*.vcd
+
+build/
